--- a/android/key.properties
+++ b/android/key.properties
@@ -1,4 +1,4 @@
 storePassword=build*2019
 keyPassword=build*2019
 keyAlias=key
-storeFile=C:/Users/HP/bahkey.jks
+storeFile=C:/Users/reach/bahkey.jks
