--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.6+6
+version: 1.0.9
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -29,6 +29,7 @@ dependencies:
   file_picker: ^1.4.1
   image_picker: 
   image: ^2.1.4
+  multi_image_picker: ^4.7.14
   flutter_spinkit: "^4.0.0"
   intl: ^0.15.8
   path_provider: ^1.4.4
@@ -95,6 +96,9 @@ flutter:
     - family: SFPro
       fonts:
          - asset: assets/fonts/SF Pro.ttf
+    - family: Mulish-Regular
+      fonts:
+          - asset: assets/fonts/Mulish/Mulish-Regular.ttf
 
   # fonts:
   #   - family: Schyler
