--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,7 +12,7 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.1.12
+version: 2.2.13+22
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
@@ -26,7 +26,7 @@ dependencies:
   swipedetector: ^1.2.0
   percent_indicator: "^2.1.1"
   photo_view: ^0.5.0
-  file_picker: ^1.4.1
+  file_picker: ^4.4.0
   image_picker: 
   image: ^2.1.4
   multi_image_picker: ^4.7.14
@@ -42,7 +42,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   cached_network_image: ^2.2.0+1
-  firebase_messaging: 5.0.1
+  firebase_messaging: 6.0.16
 
 dev_dependencies:
   flutter_test:
