--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,27 +22,27 @@ dependencies:
   flutter:
     sdk: flutter
 
-  http: ^0.12.0
+  http: ^0.13.5
   swipedetector: ^1.2.0
-  percent_indicator: "^2.1.1"
-  photo_view: ^0.5.0
-  file_picker: ^4.4.0
+  percent_indicator: ^4.2.2
+  photo_view: ^0.14.0
+  file_picker: ^5.2.5
   image_picker: 
-  image: ^2.1.4
+  image: ^3.3.0
   multi_image_picker: ^4.7.14
-  flutter_spinkit: "^4.0.0"
-  intl: ^0.15.8
-  path_provider: ^1.4.4
+  flutter_spinkit: ^5.1.0
+  intl: ^0.18.0
+  path_provider: ^2.0.11
   url_launcher: 
-  carousel_slider: ^1.3.0
+  carousel_slider: ^4.2.1
   grouped_buttons: ^1.0.4
-  shared_preferences: ^0.5.3+4
-  flutter_launcher_icons: "^0.7.0"
+  shared_preferences: ^2.0.16
+  flutter_launcher_icons: ^0.11.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.2
-  cached_network_image: ^2.2.0+1
-  firebase_messaging: 6.0.16
+  cupertino_icons: ^1.0.5
+  cached_network_image: ^3.2.1
+  firebase_messaging: ^14.2.1
 
 dev_dependencies:
   flutter_test:
