--- a/android/gradle.properties
+++ b/android/gradle.properties
@@ -1,5 +1,5 @@
-org.gradle.jvmargs=-Xmx1536M
 
 android.enableR8=true
 android.useAndroidX=true
 android.enableJetifier=true
+org.gradle.jvmargs=-Xmx1536m -Dkotlin.daemon.jvm.options="-Xskip-metadata-version-check"
