--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,10 +12,10 @@ description: A new Flutter project.
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 2.2.13+22
+version: 2.2.14+1
 
 environment:
-  sdk: ">=2.2.2 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 
 dependencies:
@@ -23,7 +23,7 @@ dependencies:
     sdk: flutter
 
   http: ^0.13.5
-  swipedetector: ^1.2.0
+  flutter_swipe_detector:
   percent_indicator: ^4.2.2
   photo_view: ^0.14.0
   file_picker: ^5.2.5
@@ -35,7 +35,7 @@ dependencies:
   path_provider: ^2.0.11
   url_launcher: 
   carousel_slider: ^4.2.1
-  grouped_buttons: ^1.0.4
+  grouped_buttons_ns:
   shared_preferences: ^2.0.16
   flutter_launcher_icons: ^0.11.0
   # The following adds the Cupertino Icons font to your application.
